fix overlap on dev/test orgs

--- a/src/sass/components/_org-cards.scss
+++ b/src/sass/components/_org-cards.scss
@@ -1,4 +1,6 @@
 .has-nested-card {
+  // remove extra space on org action dropdown
+  --sds-c-card-body-spacing-inline-end: 0;
   > .slds-card__header {
     margin-bottom: 0;
   }
@@ -19,6 +21,7 @@
 .wrap-inner-truncate {
   .slds-card__header {
     // hold space for absolutely positioned dropdown toggle
+    --sds-c-card-header-spacing-inline-end: #{$spacing-x-large};
     align-items: baseline;
     flex-wrap: wrap;
 
@@ -28,13 +31,12 @@
       display: flex;
       flex: 0 1 auto;
       flex-wrap: wrap; // allow button group to wrap when space is limited
-      position: relative;
       row-gap: $spacing-x-small;
-      width: 100%;
     }
   }
 
   .slds-has-flexi-truncate {
+    margin-right: $spacing-x-small;
     // allow org title to display in truncated state before org actions wrap
     min-width: 35%; // arbitrary width
   }
@@ -46,6 +48,6 @@
 
 .metecho-card-more {
   position: absolute;
-  right: 0;
-  top: -$spacing-x-large;
+  right: $spacing-small;
+  top: $spacing-small;
 }
